[tool.poetry]
name = "energy-apis"
version = "0.1.0"
description = ""
authors = ["Yudiell Hernandez <yudiell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-postman = { git = "https://github.com/yudiell/python-postman.git" }

retry = "^0.9.2"
[tool.isort]
profile = "black"

[tool.poetry.group.lint.dependencies]
flake8-annotations = "^3.0.1"
flake8-builtins = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-future-annotations = "^1.1.0"
flake8-isort = "^6.0.0"
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.7"
flake8-secure-coding-standard = "^1.4.0"
flake8-type-checking = "^2.4.1"
flake8-use-pathlib = "^0.3.0"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.13.3"
black = "^24.3.0"
isort = "^5.12.0"
pip-audit = "^2.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["energy_apis"]
addopts = ["--import-mode=importlib"]

[tool.poetry.scripts]
eia-api = "energy_apis.eia.api.v2.__main__:main"
